# IDE_SQUARE

IDE_SQUARE-main/: .gitignore  README.md  airport.json  requirements.txt  test.json
IDE_SQUARE-main/components/: ai_module.py  (+5 more)
IDE_SQUARE_LLM-main/: .env.template  .gitignore  README.md  pyproject.toml
IDE_SQUARE_LLM-main/examples/: requirements_examples.py
IDE_SQUARE_LLM-main/experiments/: e1_model_quality.py  e3_noise_robustness.py  full_agents_workflow.py  full_pipeline_with_verification.py  llm_agent_example.py  llm_inference.py  llm_logic_state.py  llm_to_logic_workflow.py  logic_agent_example.py  simple_workflow_example.py
IDE_SQUARE_LLM-main/experiments/e2_baseline_comparison/: README.md  __init__.py  __main__.py  approaches.py  disjointness.py  heuristics.py  main.py  models.py
IDE_SQUARE_LLM-main/experiments/e4_algorithm_ablation/: README.md  __init__.py  __main__.py  main.py  models.py  variants.py
IDE_SQUARE_LLM-main/experiments/e5_square_completion/: README.md  __init__.py  __main__.py  corner_scenarios.py  main.py  models.py
IDE_SQUARE_LLM-main/experiments/output/: full_pipeline_result.json
IDE_SQUARE_LLM-main/experiments/test_data/: e1_reference_models.json  e3_noise_variants.json
IDE_SQUARE_LLM-main/src/: __init__.py  config.py  main.py  sessions.db
IDE_SQUARE_LLM-main/src/agents/: __init__.py  base_agent.py  bot_agent.py  class_agent.py  llm_agent.py  logic_agent.py  prover_agent.py  state_agent.py  verifier_agent.py
IDE_SQUARE_LLM-main/src/api/: server.py
IDE_SQUARE_LLM-main/src/evaluation/: __init__.py  metrics.py  reference_models.py
IDE_SQUARE_LLM-main/src/models/: __init__.py
IDE_SQUARE_LLM-main/src/orchestration/: langgraph_workflow.py
(+13 files in other folders)
